# libSiffra

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  shell.nix
src/error/: macros.rs  mod.rs
src/evaluation/: mod.rs  state.rs
src/grammar/: mod.rs  representation.rs  siffra.pest
src/representations/: expression.rs  float.rs  value.rs
src/representations/dimension/: charge.rs  current.rs  macros.rs  mod.rs  power.rs  resistance.rs
