[package]
name = "libsiffra"
version = "0.3.0"
readme = "README.md"
keywords = ["siffra", "calculator", "math", "units", "dimensions"]
categories = ["mathematics"]

edition = "2024"
authors = ["Nora <libsiffra@norabyte.net>", "Johan Novak <johan@impossiblereality.dev>"]
license = "MIT"
repository = "https://github.com/NoraBytecode/libSiffra"

[dependencies]
lazy_static = "1.5.0"
pest = { version = "2.8.6" }
pest_derive = { version = "2.8.6", features = ["grammar-extras"] }
astro-float = { version = "0.9.5", default-features = false, features = ["std"] }
